data/derived/comb/progs/unify/prog7131.ml.out
Characters 191-196:
  else seen' = h :: seen'
                    ^^^^^
Error: This expression has type 'a list
       This is not a function; it cannot be applied.
